# apra-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.claude/agents/: apra-mcp-expert.md
.github/workflows/: codeql.yml  publish.yml  refresh-urls.yml  release.yml  test.yml
examples/: claude_desktop_config.json  demo_prompts.md
scripts/: refresh_seed.py
src/apra_mcp/: __init__.py  cache.py  catalog.py  client.py  curated.py  discovery.py  models.py  parquet_cache.py  parsing.py  server.py  shaping.py
src/apra_mcp/data/: seed_urls.json
src/apra_mcp/data/curated/: ADI_KEY_STATS.yaml  ADI_PERFORMANCE.yaml  ADI_PROPERTY_EXPOSURES.yaml  ADI_RISK_WEIGHTED_ASSETS.yaml  INSURANCE_GENERAL.yaml  INSURANCE_GENERAL_HISTORICAL.yaml  INSURANCE_HEALTH.yaml  LIFE_INSURANCE.yaml  LIFE_INSURANCE_HISTORICAL.yaml  MONTHLY_BANKING_STATS.yaml  MYSUPER_PRODUCTS.yaml  QUARTERLY_SUPER_PERFORMANCE.yaml  SUPER_FUND_LEVEL.yaml
tests/: conftest.py  test_cache.py  test_client.py  test_curated.py  test_customer_flows.py  test_did_you_mean.py  test_discovery.py  test_edge_data.py  test_edge_inputs.py  test_integration.py  test_latest_long_format.py  test_parsing.py  test_period_normalisation.py  test_resilience.py  test_server_validation.py  test_shaping.py  test_top_n.py
tests/fixtures/: adi_key_stats_sample.xlsx  adi_rwa_sample.xlsx  insurance_general_historical_sample.xlsx  insurance_general_sample.xlsx  life_insurance_historical_sample.xlsx  life_insurance_sample.xlsx  super_fund_level_sample.xlsx
